decorations: Show tooltip at current cursor position

instead of at the mouse position. Fixes tooltips showing
up in wrong places when using tablets.
BUG: 491143
FIXED-IN: 6.1.5